--- a/style.css
+++ b/style.css
@@ -22,17 +22,20 @@ body {
 }
 
 .disco {
-    background-color: blue;
+    background-color: transparent;
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 3px solid black;
+    border: 3px solid transparent;
+    cursor: pointer;
 }
 .disco[data-cor="preto"] {
    background-color: rgb(42, 42, 42); 
+   border-color: black;
 }
 .disco[data-cor="branco"] {
     background-color: white;
+    border-color: black;
 }
 
 .disco[data-pos="0"] {
